--- a/index.html
+++ b/index.html
@@ -228,11 +228,11 @@
             <form action="https://formsubmit.co/2e6726bddf28c66c8118a53d0be7c51d" method="POST">
                 <div class="input-box">
                     <div class="input-field">
-                        <input type="text" placeholder="Full Name" required>
+                        <input type="text" name="Name" placeholder="Full Name" required>
                         <span class="focus"></span>
                     </div>
                     <div class="input-field">
-                        <input type="email" placeholder="Email Address" required>
+                        <input type="email" name="Email" placeholder="Email Address" required>
                         <span class="focus"></span>
                     </div>
                     <span class="animate scroll" style="--i:3;"></span>
@@ -240,17 +240,17 @@
 
                 <div class="input-box">
                     <div class="input-field">
-                        <input type="number" placeholder="Mobile Number" required>
+                        <input type="number" name="phno"placeholder="Mobile Number" required>
                         <span class="focus"></span>
                     </div>
                     <div class="input-field">
-                        <input type="text" placeholder="Email Subject" required>
+                        <input type="text" name="Email-subject" placeholder="Email Subject" required>
                         <span class="focus"></span>
                     </div>
                     <span class="animate scroll" style="--i:5;"></span>
                 </div>
                 <div class="textarea-field">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" required></textarea>
+                    <textarea name="" id="" cols="30" rows="10" name="message" placeholder="Your Message" required></textarea>
                     <span class="focus"></span>
                     <span class="animate scroll" style="--i:7;"></span>
                 </div>
