--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     <span class="animate scroll" style="--i:5;"></span>
                 </div>
                 <div class="textarea-field">
-                    <textarea name="" id="" cols="30" rows="10" name="message" placeholder="Your Message" required></textarea>
+                    <textarea name="Message" cols="30" rows="10"  placeholder="Your Message" required></textarea>
                     <span class="focus"></span>
                     <span class="animate scroll" style="--i:7;"></span>
                 </div>
