--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <!--Disable Captcha-->
                 <input type="hidden" name="_captcha" value="false">
 
-                <input type="hidden" name="_next" value="https://ravichandra938.github.io/Ravi-portfolio/formsubmit.co/success.html">
+                <input type="hidden" name="_next" value="https://ravichandra938.github.io/Ravi-portfolio/success.html">
 
                 <div class="input-box">
                     <div class="input-field">
