--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <h3>Frontend Developer</h3>
                     <span class="animate" style="--i:3;"></span>
                 </div>
-                <p>sdfghjk asdf sd rt fgh fgh  tgdfjd fjdftjdf f dtfudftudf fjdtdj f
+                <p>Start your journey here, where you'll find an overview of my portfolio and a brief introduction to who I am.
                     <span class="animate" style="--i:4;"></span>
                 </p>
 
@@ -54,7 +54,9 @@
             <div class="home-imgHover"></div>
             <span class="animate home-img" style="--i:7;"></span>
         </section>
+
         <!--about section-->
+
         <section class="about" id="about">
             <h2 class="heading">About<span> Me</span><span class="animate scroll" style="--i:1;"></span></h2>
             <div class="about-img">
@@ -64,7 +66,7 @@
             </div>
             <div class="about-content">
                 <h3>Frontend Developer!<span class="animate scroll" style="--i:3;"></span></h3>
-                <p>jgdsg gdj hjsk khdh hdjh hjffh kjhdskhkkhhkhhdgdgkdhhkdhdhjgdjgdjgdsjgjdg
+                <p> I like to code I'm into frontend developing since diploma, Welcome to my Interactive Portfolio Showcase! This platform serves as a window into my creative world, highlighting my skills, experiences, and the projects I've had the privilege to work on.
                     <span class="animate scroll" style="--i:4;"></span>
                 </p>
                 <div class="btn-box btns">
@@ -84,7 +86,7 @@
                             <div class="content">
                                 <div class="year"><i class='bx bxs-calendar'></i> 2018 - 2019</div>
                                 <h3>Diploma - DR.B.R.A GMR polytechnic college</h3>
-                                <p> uhrdsghjf hjgdhasdjqw ravu chandra moulliddjd ffghgjhgghjfhghdghdjdgjhghdfgfhgdsjhkjjskjdjdkhfjdhjdhhyghjg</p>
+                                <p> Aggregation :- 72%</p>
                             </div>
                         </div>
 
@@ -92,7 +94,7 @@
                             <div class="content">
                                 <div class="year"><i class='bx bxs-calendar'></i> 2019 - 2020</div>
                                 <h3>Diploma - DR.B.R.A. GMR polytechnic college</h3>
-                                <p>uhrdsghjf hjgdhasdjqw ravu chandra moulliddjd ffdnjdd uhrdsghjf hjgdhasdjqw ravu chandra moulliddjd ffdnjdd</p>
+                                <p>Aggregation :- 80.2%</p>
                             </div>
                         </div>
 
@@ -100,7 +102,7 @@
                             <div class="content">
                                 <div class="year"><i class='bx bxs-calendar'></i> 2020 - 2021</div>
                                 <h3>Diploma - DR.B.R.A GMR polytechnic college</h3>
-                                <p>uhrdsghjf hjgdhasdjqw ravu chandra moulliddjd ffdnjdduhrdsghjf hjgdhasdjqw ravu chandra moulliddjd ffdnjdd</p>
+                                <p>Aggregation :- 88%</p>
                             </div>
                         </div>
                         <span class="animate scroll" style="--i:3;"></span>
@@ -113,24 +115,24 @@
                         <div class="education-content">
                             <div class="content">
                                 <div class="year"><i class='bx bxs-calendar'></i> 2022 - 2023</div>
-                                <h3>Bacheler's Degree - JNTU-GV vizianagaram</h3>
-                                <p>priyahagdhguhrdsghjf hjgdhasdjqw ravu chandra moulliddjd ffdnjdduhrdsghjf hjgdhasdjqw ravu chandra moulliddjd ffdnjdd</p>
+                                <h3>Bachelor's Degree - JNTU-GV vizianagaram</h3>
+                                <p>Aggregation :- 7.07</p>
                             </div>
                         </div>
 
                         <div class="education-content">
                             <div class="content">
                                 <div class="year"><i class='bx bxs-calendar'></i> 2023 - 2024</div>
-                                <h3>Bacheler's Degree - JNTU-GV vizianagaram </h3>
-                                <p>ahgdhdghd uhrdsghjf hjgdhasdjqw ravu chandra moulliddjd ffdnjdduhrdsghjf hjgdhasdjqw ravu chandra moulliddjd ffdnjdd</p>
+                                <h3>Bachelor's Degree - JNTU-GV vizianagaram </h3>
+                                <p>currently pursing.</p>
                             </div>
                         </div>
 
                         <div class="education-content">
                             <div class="content">
                                 <div class="year"><i class='bx bxs-calendar'></i> 2024 - 2025</div>
-                                <h3>Bacheler's Degree - JNTU-GV vizianagaram</h3>
-                                <p>hsgesgtdjdgghduhrdsghjf avu chandra moulliddjd ffdnjdduhrdsghjf hjgdhasdjqw ravu chandra moulliddjd ffd</p>
+                                <h3>Bachelor's Degree - JNTU-GV vizianagaram</h3>
+                                <p>currently pursing</p>
                             </div>
                         </div>
 
@@ -148,16 +150,16 @@
             <h2 class="heading">My<span>Skills</span><span class="animate scroll" style="--i:1;"></span></h2>
             <div class="skills-row">
                 <div class="skills-column">
-                    <h3 class="title">Coding skills<span class="animate scroll" style="--i:2;"></span></h3>
+                    <h3 class="title">Web development skills<span class="animate scroll" style="--i:2;"></span></h3>
                     <div class="skills-box">
                         <div class="skills-content">
                             <div class="progress">
-                                <h3>HTML<span>90%</span></h3>
+                                <h3>HTML<span>100%</span></h3>
                                 <div class="bar"><span></span></div>
                             </div>
 
                             <div class="progress">
-                                <h3>CSS<span>80%</span></h3>
+                                <h3>CSS<span>90%</span></h3>
                                 <div class="bar"><span></span></div>
                             </div>
 
@@ -167,7 +169,7 @@
                             </div>
 
                             <div class="progress">
-                                <h3>c/c++<span>80%</span></h3>
+                                <h3>Wordpress<span>50%</span></h3>
                                 <div class="bar"><span></span></div>
                             </div>
                         </div>
@@ -176,26 +178,26 @@
                 </div>
 
                 <div class="skills-column">
-                    <h3 class="title">professional skills<span class="animate scroll" style="--i:5;"></span></h3>
+                    <h3 class="title">Coding skills<span class="animate scroll" style="--i:5;"></span></h3>
                     <div class="skills-box">
                         <div class="skills-content">
                             <div class="progress">
-                                <h3>Web development<span>80%</span></h3>
+                                <h3>C<span>80%</span></h3>
                                 <div class="bar"><span></span></div>
                             </div>
 
                             <div class="progress">
-                                <h3>CSS<span>80%</span></h3>
+                                <h3>C++<span>70%</span></h3>
                                 <div class="bar"><span></span></div>
                             </div>
 
                             <div class="progress">
-                                <h3>JavaScript<span>60%</span></h3>
+                                <h3>Java<span>80%</span></h3>
                                 <div class="bar"><span></span></div>
                             </div>
 
                             <div class="progress">
-                                <h3>c/c++<span>80%</span></h3>
+                                <h3>Python<span>70%</span></h3>
                                 <div class="bar"><span></span></div>
                             </div>
                         </div>
