--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </p>
 
                 <div class="btn-box">
-                    <a href="#" class="btn">Hire ME</a>
+                    <a href="/RCMresume.pdf" class="btn" download><i class='bx bxs-download'></i>&nbsp;Resume </a>
                     <a href="#contact" class="btn">Let's Talk</a>
                     <span class="animate" style="--i:5;"></span>
                 </div>
@@ -85,24 +85,24 @@
                         <div class="education-content">
                             <div class="content">
                                 <div class="year"><i class='bx bxs-calendar'></i> 2018 - 2019</div>
-                                <h3>Diploma - DR.B.R.A GMR polytechnic college</h3>
-                                <p> Aggregation :- 72%</p>
+                                <h3>Diploma - DR.B.R.A GMR polytechnic college.</h3>
+                                <p> Aggregation :- 72%.</p>
                             </div>
                         </div>
 
                         <div class="education-content">
                             <div class="content">
                                 <div class="year"><i class='bx bxs-calendar'></i> 2019 - 2020</div>
-                                <h3>Diploma - DR.B.R.A. GMR polytechnic college</h3>
-                                <p>Aggregation :- 80.2%</p>
+                                <h3>Diploma - DR.B.R.A. GMR polytechnic college.</h3>
+                                <p>Aggregation :- 80.2%.</p>
                             </div>
                         </div>
 
                         <div class="education-content">
                             <div class="content">
                                 <div class="year"><i class='bx bxs-calendar'></i> 2020 - 2021</div>
-                                <h3>Diploma - DR.B.R.A GMR polytechnic college</h3>
-                                <p>Aggregation :- 88%</p>
+                                <h3>Diploma - DR.B.R.A GMR polytechnic college.</h3>
+                                <p>Aggregation :- 88%.</p>
                             </div>
                         </div>
                         <span class="animate scroll" style="--i:3;"></span>
@@ -110,20 +110,20 @@
                 </div>
                 
                 <div class="education-column">
-                    <h3 class="title">Experience<span class="animate scroll" style="--i:5;"></span></h3>
+                    <h3 class="title">Education<span class="animate scroll" style="--i:5;"></span></h3>
                     <div class="education-box">
                         <div class="education-content">
                             <div class="content">
                                 <div class="year"><i class='bx bxs-calendar'></i> 2022 - 2023</div>
-                                <h3>Bachelor's Degree - JNTU-GV vizianagaram</h3>
-                                <p>Aggregation :- 7.07</p>
+                                <h3>Bachelor's Degree - JNTU-GV vizianagaram.</h3>
+                                <p>Aggregation :- 7.07.</p>
                             </div>
                         </div>
 
                         <div class="education-content">
                             <div class="content">
                                 <div class="year"><i class='bx bxs-calendar'></i> 2023 - 2024</div>
-                                <h3>Bachelor's Degree - JNTU-GV vizianagaram </h3>
+                                <h3>Bachelor's Degree - JNTU-GV vizianagaram. </h3>
                                 <p>currently pursing.</p>
                             </div>
                         </div>
@@ -131,8 +131,8 @@
                         <div class="education-content">
                             <div class="content">
                                 <div class="year"><i class='bx bxs-calendar'></i> 2024 - 2025</div>
-                                <h3>Bachelor's Degree - JNTU-GV vizianagaram</h3>
-                                <p>currently pursing</p>
+                                <h3>Bachelor's Degree - JNTU-GV vizianagaram.</h3>
+                                <p>currently pursing.</p>
                             </div>
                         </div>
 
