--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </p>
 
                 <div class="btn-box">
-                    <a href="/RCMresume.pdf" class="btn" download><i class='bx bxs-download'></i>&nbsp;Resume </a>
+                    <a href="RCMresume.pdf" class="btn" download><i class='bx bxs-download'></i>&nbsp;Resume </a>
                     <a href="#contact" class="btn">Let's Talk</a>
                     <span class="animate" style="--i:5;"></span>
                 </div>
